# pgam_jax

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  weekly-fresh-resolution.yaml
benchmarks/: README.md  __init__.py  common.py  legacy_worker.py  make_cases.py  microbench_penalty_handler.py  run_legacy_pgam.py  run_matrix.py  run_pgam_jax.py  summarize.py
docs/: cholesky_derivative.md  concurvity_examples.md  pgam_overview.md
examples/: quick_start.ipynb  quick_start_temporal.ipynb  run_and_compare.py
for_developers/: stable_sqrt_penalty.md
notebooks/: benchmark_results.md
scripts/: generate_reml_test_data.py
src/pgam/: __init__.py  iterative_optim.py
src/pgam_clean/: __init__.py  _patch_nemos.py  gam.py  gcv_compute.py  iterative_optim.py  penalty_utils.py
src/pgam_clean/basis/: __init__.py  _basis.py  _basis_utils.py  _bspline.py
src/pgam_jax/: __init__.py  _chol_deriv.py  _identifiable_features.py  _laplace_reml.py  _laplace_reml_aic.py  _laplace_reml_beta_derivs.py  _laplace_reml_fit.py  _laplace_reml_hessian.py  _laplace_reml_vbeta.py  _nemos_compat.py  _patch_nemos.py  _penalty_handler.py  _pirls_weights.py  _pql_gcv.py  _pql_reml.py  _slam_compute.py  _utils.py  concurvity.py  config.py  gam.py  iterative_optim.py  penalty_utils.py
tests/: _legacy_penalty_handler.py  conftest.py  test_benchmarks.py  test_bounds_validation.py  test_chol_deriv.py  test_gam.py  test_gam_identifiability.py  test_gam_penalty_routing.py  test_iterative_optim.py  test_laplace_reml.py  test_laplace_reml_beta_derivs.py  test_laplace_reml_hessian.py  test_laplace_reml_vbeta.py  test_penalty_handler.py  test_penalty_utils.py  test_pirls_weights.py  test_pql_gcv.py  test_pql_reml.py  test_slam_compute.py  test_stable_penalty.py
tests/data/: laplace_reml_gamma.json  laplace_reml_poisson.json  reml_1d_and_2d_smooth.json  reml_1d_smooths.json  two_dim_bspline_penalty.json
